# agents_thinindex

./: .gitignore  .thinindexignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES  WI.md  deny.toml  install.sh  uninstall.sh
.dev_index/: index.jsonl  manifest.json
docs/: AGENT_INTEGRATION.md  CI_INTEGRATION.md  CONTEXT_PACKS.md  DEPENDENCY_GRAPH.md  DEVELOPER_DOCUMENTATION.md  FILE_REFERENCES.md  FILE_ROLES.md  GETTING_STARTED.md  IMPACT_ANALYSIS.md  INSTALLERS.md  LANGUAGE_SUPPORT.md  LANGUAGE_SUPPORT_AUDIT.md  LICENSE_AUDIT.md  LICENSING.md  NATIVE_DISTRIBUTION_PLAN.md  PARSER_MAINTENANCE.md  PARSER_SUPPORT.md  PERFORMANCE.md  PLAN_CAVEATS_AND_UNIMPLEMENTED_SUMMARY.md  PRODUCT_BOUNDARY.md  QUALITY.md  QUALITY_CTAG_BOUNDARY.md  QUALITY_LOOP.md  QUALITY_SYSTEM_AUDIT.md  RC_0.1.4_HANDOFF.md  README.md  REAL_REPO_MANIFEST.md  REFERENCE_GRAPH.md  RELEASE_CHECKLIST.md  RELEASING.md  REPO_LEGACY_CLEANUP_AUDIT.md  ROADMAP.md  SCORECARD.md  SECURITY_PRIVACY.md  SEMANTIC_ADAPTERS.md  TARGET_PLATFORM_SMOKE.md  TEAM_CI_ROADMAP.md  TECHNICAL_FINAL_AUDIT.md  TROUBLESHOOTING.md  USER_DOCUMENTATION.md  (+1 more)
prompts/: PLAN_00_SQLITE_INDEX_STORAGE.md  PLAN_01_REFERENCE_GRAPH_FOUNDATION.md  PLAN_02_DETERMINISTIC_REFERENCE_EXTRACTION.md  PLAN_03_CONTEXT_COMMANDS.md  PLAN_04_IMPACT_COMMAND.md  PLAN_05_AGENT_VALUE_BENCHMARKS.md  PLAN_06_AGENT_WORKFLOW_INTEGRATION.md  PLAN_07_REAL_REPO_BENCHMARK_SET.md  PLAN_08_INSTALL_AND_RELEASE_HARDENING.md  PLAN_09_DOCUMENTATION_AND_PRODUCT_POSITIONING.md  PLAN_10_PRICING_BOUNDARY_AND_PRO_EDITION.md  PLAN_11A_REMOVE_CTAGS_SURFACES_AND_ADD_PARSER_BOUNDARY.md  PLAN_11A_TREE_SITTER_EXTRACTION_FRAMEWORK.md  PLAN_11B_NATIVE_RUST_PARSER.md  PLAN_11B_REPRESENTATIVE_LANGUAGE_PACK.md  PLAN_11C_PARSER_CONFORMANCE_AND_DOCS.md  PLAN_11E_NATIVE_PARSER_PARITY_AND_DOCS.md  PLAN_11_REMOVE_CTAGS_AND_ADD_NATIVE_PARSER.md  PLAN_12A_EXTENDED_JVM_DOTNET_LANGUAGE_PACK.md  PLAN_12B_EXTENDED_APP_SYSTEM_LANGUAGE_PACK.md  PLAN_12C_EXTENDED_WEB_DOC_CONFIG_LANGUAGE_PACK.md  PLAN_12D_EXTENDED_LANGUAGE_PACK_CONFORMANCE_AND_DOCS.md  PLAN_12E_REAL_REPO_LANGUAGE_HARDENING.md  PLAN_12F_PARSER_COVERAGE_CLOSURE.md  PLAN_12G_PARSER_PERFORMANCE_AND_REGRESSION_GATES.md  PLAN_12_LICENSE_AUDIT_AND_THIRD_PARTY_NOTICES.md  PLAN_13_CROSS_PLATFORM_RELEASE_ARCHIVES.md  PLAN_13_LICENSE_AUDIT_AND_THIRD_PARTY_NOTICES.md  PLAN_14_CROSS_PLATFORM_RELEASE_ARCHIVES.md  PLAN_14_INSTALLERS_AND_SIGNING.md  PLAN_15_INSTALLERS_AND_SIGNING.md  PLAN_15_RELEASE_AUTOMATION_AND_CI.md  PLAN_16_RELEASE_AUTOMATION_AND_CI.md  PLAN_17_OPTIONAL_COMPARATOR_QUALITY_PLUGIN.md  PLAN_18_INDEX_QUALITY_DRIFT_PLUGIN_GATES.md  PLAN_19_CONTINUOUS_QUALITY_IMPROVEMENT_PLUGIN_LOOP.md  PLAN_20_SUPPORT_LEVELS_AND_LANGUAGE_CLAIMS.md  PLAN_23_COMPARATOR_TRIAGE_WORKFLOW.md  (+49 more)
(+167 files in other folders)
