[package]
name = "thinindex"
version = "0.1.0"
edition = "2021"
description = "Fast repo-local thin code index with compact CLI search"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "wi"
path = "src/bin/wi.rs"

[[bin]]
name = "wi-init"
path = "src/bin/wi-init.rs"

[[bin]]
name = "wi-stats"
path = "src/bin/wi-stats.rs"