[package]
name = "thinindex"
version = "0.1.4"
edition = "2024"
description = "Fast repo-local thin code index with compact CLI search"
license = "Paid-Premium"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
ignore = "0.4"
tree-sitter = "0.25.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "build_index"
path = "src/bin/build_index.rs"

[[bin]]
name = "wi"
path = "src/bin/wi.rs"

[[bin]]
name = "wi-init"
path = "src/bin/wi-init.rs"

[[bin]]
name = "wi-stats"
path = "src/bin/wi-stats.rs"
